(feat) Attempt at correcting gist font size on iPhone

--- a/src/assets/stylesheets/_styles.scss
+++ b/src/assets/stylesheets/_styles.scss
@@ -373,3 +373,7 @@ iframe {
   min-height: 300px;
   margin-bottom: $standard-spacing;
 }
+
+.gist {
+  font-size: inherit;
+}
